使用boot添加分页、导航条等样式

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -43,14 +43,14 @@ header.col-md-2{
     color: #fff;
     font-size: 18px;
 }
-nav{
+.aside{
     background-color: #EEEEEE;
     border-bottom: 1px solid #ccc;
 }
-nav ul{
+.aside ul{
     width: 100%;
 }
-nav a{
+.aside a{
     display: block;
     height: 50px;
     color: #666666;
@@ -58,11 +58,11 @@ nav a{
     padding-left: 30px;
     font-size: 16px;
 }
-nav a:hover{
+.aside a:hover{
     background-color: #fff;
     color: #333;
 }
-nav span::before{
+.aside span::before{
     vertical-align: bottom;
     padding-right: 5px;
 }
@@ -158,7 +158,7 @@ aside img{
 
 /* nav 在小屏幕*/
 @media screen and (max-width: 991px){
-    nav li {
+    .aside li {
         float: left;
         width: 20%;
     }
@@ -172,7 +172,7 @@ aside img{
     .new-b{
         width: 100%;
     }
-    nav a{
+    .aside a{
         font-size: 14px;
         padding-left: 3px;
     }
